--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,9 +29,12 @@
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
     "expo-web-browser": "~11.0.0",
+    "moment": "^2.29.4",
+    "moment-with-locales-es6": "^1.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-calendars": "^1.1290.0",
     "react-native-check-app-install": "^0.0.5",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.3.1",
