--- a/frontend/app.json
+++ b/frontend/app.json
@@ -19,7 +19,9 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "fr.insta",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "adaptiveIcon": {
