--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/datetimepicker": "^6.5.3",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
@@ -25,8 +25,10 @@
     "expo": "~46.0.16",
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.4",
+    "expo-device": "~4.3.0",
     "expo-font": "~10.2.1",
     "expo-linking": "~3.2.2",
+    "expo-notifications": "~0.16.1",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
@@ -39,12 +41,12 @@
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1290.0",
     "react-native-check-app-install": "^0.0.5",
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7",
-    "expo-notifications": "~0.16.1",
-    "expo-device": "~4.3.0"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
